@@ -53,6 +53,7 @@ CREATE TABLE ir_translation (
     id INTEGER DEFAULT NEXTVAL('ir_translation_id_seq') NOT NULL,
     lang VARCHAR,
     src TEXT,
+    src_md5 VARCHAR(32) NOT NULL,
     name VARCHAR NOT NULL,
     res_id INTEGER NOT NULL DEFAULT 0,
     value TEXT,
